--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@auth/prisma-adapter": "^2.10.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
+    "@getbrevo/brevo": "^3.0.1",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@react-email/components": "^0.5.6",
+    "@react-email/render": "^1.3.2",
     "@react-google-maps/api": "^2.20.7",
     "@uploadthing/react": "^7.3.3",
     "class-variance-authority": "^0.7.1",
