--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@getbrevo/brevo": "^3.0.1",
     "@prisma/client": "^6.16.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "^0.5.6",
     "@react-email/render": "^1.3.2",
